--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
 <div class="container">
     <form class="main">
-        <input type="text" class="input" placeholder="username">
+        <input type="email" class="input" placeholder="Email address">
         <input type="password" class="input" placeholder="password">
         <button type="submit" class="submit">LOGIN</button>
         <div class="link">
